Fixes all build issues
JIRA: SAF-5

Signed-off-by: Vikram Singh Kalakoti <vikramskalakoti@gmail.com>
Change-Id: I8b9f2e6943b035a3a328d3ba9486fe1388ab9346